# Robotic-StereoVision

./: .clang-format  RAEDMD.md  README.md
robotic_config/: CMakeLists.txt  package.xml
robotic_config/config/: controllers.yaml  kinematics.yaml  ompl_planning.yaml  robotic.srdf  ros_controllers.yaml
robotic_config/launch/: robotic_config.launch.py
robotic_config/urdf/: common_materials.xacro  gripper_macro.xacro  robotic_macro.xacro  robotic_with_zed.xacro  zed_macro.urdf.xacro
robotic_control/: CMakeLists.txt  package.xml  test.py
robotic_control/launch/: robotic_control.launch.py
robotic_control/urdf/: common_materials.xacro  gripper_macro.xacro  robotic_macro.xacro  robotic_with_zed.xacro
robotic_driver/: package.xml  setup.cfg  setup.py
robotic_driver/launch/: io_service.launch.py  motion.launch.py  robot_interface.launch.py  robot_state.launch.py  system_service.launch.py
robotic_driver/robotic_driver/: param_utils.py
robotic_driver/robotic_driver/io_service/: io_service_interface.py  io_service_node.py
robotic_driver/robotic_driver/motion/: motion_node.py  motion_service_interface.py  tp_trajectory_handler.py  trajectory_action_server.py
robotic_driver/robotic_driver/robot_state/: gripper_state_handler.py  io_state_handler.py  joint_state_handler.py  robot_state_handler.py  robot_state_interface.py
robotic_driver/robotic_driver/system_service/: system_service_interface.py
target_grabbing/: CMakeLists.txt  package.xml
target_grabbing/include/: grabbing.hpp
target_grabbing/src/: grabbing.cpp  main.cpp
target_tf/: CMakeLists.txt  package.xml
target_tf/include/: target.hpp
target_tf/src/: main.cpp  target.cpp
zed-ros2-wrapper/zed_components/: CMakeLists.txt  package.xml
zed-ros2-wrapper/zed_components/src/tools/include/: sl_tools.hpp
zed-ros2-wrapper/zed_components/src/zed_camera/include/: zed_camera_component.hpp
zed-ros2-wrapper/zed_components/src/zed_camera/src/: zed_camera_component_main.cpp
zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml
zed-ros2-wrapper/zed_wrapper/launch/: zed_camera.launch.py
zed_cpp/: CMakeLists.txt  package.xml
zed_cpp/include/: utils.h  zed.hpp
zed_cpp/src/: main.cpp  zed.cpp
zed_interfaces/: CMakeLists.txt  package.xml
zed_interfaces/msg/: Obj.msg  Trk.msg
zed_interfaces/srv/: SetPos.srv
zed_launch/: CMakeLists.txt  package.xml
zed_launch/launch/: zedxm.launch.py  zedxm_rviz2.launch.py
zed_ros2/zed-ros2-wrapper/zed_components/src/tools/include/: sl_logging.hpp  sl_tools.hpp  sl_types.hpp
zed_ros2/zed-ros2-wrapper/zed_components/src/tools/src/: gnss_replay.cpp  sl_tools.cpp  sl_types.cpp  sl_win_avg.cpp
zed_ros2/zed-ros2-wrapper/zed_components/src/zed_camera/include/: cost_traversability.hpp
zed_ros2/zed-ros2-wrapper/zed_components/src/zed_camera/src/: zed_camera_component_main.cpp  zed_camera_component_objdet.cpp  zed_camera_component_video_depth.cpp
zed_ros2/zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml
zedxm-ros2/zed-ros2-wrapper/zed_components/src/tools/include/: gnss_replay.hpp  sl_win_avg.hpp
zedxm-ros2/zed-ros2-wrapper/zed_components/src/tools/src/: gnss_replay.cpp
zedxm-ros2/zed-ros2-wrapper/zed_components/src/zed_camera/include/: zed_camera_component.hpp
zedxm-ros2/zed-ros2-wrapper/zed_components/src/zed_camera/src/: cost_traversability.cpp  zed_camera_component_bodytrk.cpp
zedxm-ros2/zed-ros2-wrapper/zed_ros2/: package.xml
zedxm-ros2/zed-ros2-wrapper/zed_wrapper/: package.xml
zedxm-ros2/zed_launch/: CMakeLists.txt
zedxm-ros2/zed_launch/launch/: zedxm.launch.py
